force-app/main/default/objects/Employee_log__c/Employee_log__c.object-meta.xml
<CustomObject>
    <label>Employee log</label>
    <nameField>
        <displayFormat>Elog-{0000}</displayFormat>
        <label>Employee log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>