force-app/main/default/objects/Employee_log__c/fields/Break_time__c.field-meta.xml
<CustomField>
    <fullName>Break_time__c</fullName>
    <formula>Checked_in__c + ( 2 / 24 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Break time</label>
    <type>DateTime</type>
</CustomField>