force-app/main/default/objects/Employee_log__c/fields/Checked_in__c.field-meta.xml
<CustomField>
    <fullName>Checked_in__c</fullName>
    <description>Emp checked in date</description>
    <label>Checked in</label>
    <type>DateTime</type>
</CustomField>