force-app/main/default/objects/Employee_log__c/fields/Checked_in_late__c.field-meta.xml
<CustomField>
    <fullName>Checked_in_late__c</fullName>
    <formula>IF(

    Checked_in__c &gt; 
      
   DATETIMEVALUE(
      TEXT( YEAR( DATEVALUE(  Checked_in__c ))) + &quot;-&quot; +
      TEXT( MONTH( DATEVALUE(  Checked_in__c ))) + &quot;-&quot; + 
      TEXT( DAY( DATEVALUE(  Checked_in__c ))) + &quot;-&quot;  + &quot;03:30:00&quot;
   ), 
   TRUE,
   FALSE

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checked in late?</label>
    <type>Checkbox</type>
</CustomField>