force-app/main/default/objects/Employee_log__c/fields/Checked_out__c.field-meta.xml
<CustomField>
    <fullName>Checked_out__c</fullName>
    <description>Employee check out time</description>
    <label>Checked out</label>
    <type>DateTime</type>
</CustomField>