force-app/main/default/objects/Employee_log__c/fields/Checked_out_now__c.field-meta.xml
<CustomField>
    <fullName>Checked_out_now__c</fullName>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checked out now</label>
    <type>DateTime</type>
</CustomField>