force-app/main/default/objects/Employee_log__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <formula>IF (
  ISBLANK (Checked_out__c),
  Floor((NOW() + (5.5 / 24)) - Checked_in__c) * 24,
  Floor(Checked_out__c - Checked_in__c) * 24
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>