force-app/main/default/objects/Employee_log__c/fields/Late_report_submission__c.field-meta.xml
<CustomField>
    <fullName>Late_report_submission__c</fullName>
    <formula>NOT ( ISBLANK( Report_submitted_time__c ) ) &amp;&amp;

  Report_submitted_time__c &gt;  TIMEVALUE( &quot;17:00:00.000&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late report submission</label>
    <type>Checkbox</type>
</CustomField>