force-app/main/default/objects/Employee_log__c/fields/Report_submitted_time__c.field-meta.xml
<CustomField>
    <fullName>Report_submitted_time__c</fullName>
    <label>Report submitted time</label>
    <type>Time</type>
</CustomField>