force-app/main/default/objects/Employee_log__c/fields/Time_since_report_submitted__c.field-meta.xml
<CustomField>
    <fullName>Time_since_report_submitted__c</fullName>
    <formula>TEXT ( FLOOR( (TIMENOW() + (5.5* 60 * 60 * 1000) -  Report_submitted_time__c ) / 3600000 )) + &quot; Hours&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time since report submitted</label>
    <type>Text</type>
</CustomField>